2 styles in one file

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>Stylish Digital Clock</title>
@@ -7,5 +7,20 @@
 <body>
   <div id="clock"></div>
   <script src="script.js"></script>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Stylish Digital Clock</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="clock-container">
+        <div id="clock"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
